fix(ui): tag box shadow cut off in tag pages

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -40,8 +40,7 @@ a {
 
 // Animated underline.
 // https://www.dannyguo.com/blog/animated-multiline-link-underlines-with-css
-a,
-a:visited {
+a {
     // See Note [!important].
     text-decoration: none !important;
 
