--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -62,7 +62,7 @@
         right: 0;
         z-index: 2;
         // height: fit-content;
-        overflow-y: auto;
+        // overflow-y: auto; // Note: this is important for long sidebars, but box-shadows will be cut off.
         position: sticky;
         max-height: calc(100vh - ($header-height + 2rem) - var(--header-extra));
         transition: $transition-duration-slow linear;
